@@ -8,8 +8,8 @@ AUTOMAKE_OPTIONS = foreign 1.4
 
 BSP_PIECES = startup scitab console
 
-# pieces to pick up out of libcpu/sh
-CPU_PIECES = null clock timer sci score
+# pieces to pick up out of libcpu/sh/sh7045
+CPU_PIECES = clock timer sci score
 
 # bummer; have to use $foreach since % pattern subst rules only replace 1x
 OBJS = $(foreach piece, $(BSP_PIECES), ../$(piece)/$(ARCH)/$(piece).rel) \
